chore: 更新部分主题配置

--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -28,8 +28,8 @@ menu:
 
 code_blocks:
   # Code block theme: darker / pale night / light / ocean / false
-  theme: light
-  macStyle: false
+  theme: darker
+  macStyle: true
   # Code block height limit (unit: px)
   height_limit: false
   word_wrap: false
@@ -39,14 +39,14 @@ code_blocks:
   language: true
   # true: shrink the code blocks | false: expand the code blocks | none: expand code blocks and hide the button
   shrink: false
-  fullpage: false
+  fullpage: true
 
 # Social media links
 # Formal:
 #   icon: link || the description || color
 social:
-  # fab fa-github: https://github.com/xxxxx || Github || '#24292e'
-  # fas fa-envelope: mailto:xxxxxx@gmail.com || Email || '#4a7dbe'
+  fab fa-github: https://github.com/wangxiaoze-view || Github || '#24292e'
+  fas fa-envelope: mailto:wangxiaoze@petalmail.com || Email || '#4a7dbe'
 
 # --------------------------------------
 # Image Settings
