--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -477,7 +477,7 @@ math:
 search:
   # Choose: algolia_search / local_search / docsearch
   # leave it empty if you don't need search
-  use:
+  use: docsearch
   placeholder:
 
   # Algolia Search
