--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -500,7 +500,7 @@ search:
   docsearch:
     appId: Q09MW9A78N
     apiKey: 745d8eeed86a20f5164e0a44a8195a19
-    indexName: wangxiaoze
+    indexName: wangzevw
     option:
 
 # --------------------------------------
