--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -914,7 +914,7 @@ lightbox:
 
 # Series
 series:
-  enable: false
+  enable: true
   # Order by title or date
   orderBy: 'title'
   # Sort of order. 1, asc for ascending; -1, desc for descending
