feat: 将搜索更新为本地搜索

--- a/_config.yml
+++ b/_config.yml
@@ -128,3 +128,9 @@ nofollow:
   enable: true
   field: site
   exclude:
+
+# https://github.com/wzpan/hexo-generator-search
+search:
+  path: search.xml
+  field: post
+  content: true
