--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -749,11 +749,11 @@ site_verification:
 
 theme_color:
   enable: true
-  main: "#49B1F5"
+  main: "#FF7242"
   paginator: "#00c4b6"
-  button_hover: "#FF7242"
-  text_selection: "#00c4b6"
-  link_color: "#99a9bf"
+  button_hover: "#49B1F5"
+  text_selection: "#FF7242"
+  link_color: "#FF7242"
   meta_color: "#858585"
   hr_color: "#A4D8FA"
   code_foreground: "#F47466"
@@ -761,7 +761,7 @@ theme_color:
   toc_color: "#00c4b6"
   blockquote_padding_color: "#49b1f5"
   blockquote_background_color: "#49b1f5"
-  scrollbar_color: "#49b1f5"
+  scrollbar_color: "#FF7242"
   meta_theme_color_light: "ffffff"
   meta_theme_color_dark: "#0d0d0d"
 
